--- a/CSS-Flexbox e layouts responsivos/css/flexbox.css
+++ b/CSS-Flexbox e layouts responsivos/css/flexbox.css
@@ -1,5 +1,6 @@
 /* CABEÇALHO */
-.cabecalho__container{
+
+.cabecalho__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,29 +8,30 @@
     top: 0;
 }
 
-.cabecalho__pesquisar__item{
+.cabecalho__pesquisar__item {
     display: none;
 }
 
 /* MENU */
-.menu__container{
+
+.menu__container {
     position: fixed;
     bottom: 0%;
     height: 74px;
     width: 100%;
 }
 
-.menu__lista{
+.menu__lista {
     display: flex;
     justify-content: space-around;
     height: 100%;
 }
 
-.menu__lista li{
+.menu__lista li {
     align-self: center;
 }
 
-.menu__itens{
+.menu__itens {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -37,12 +39,13 @@
 
 .menu__lista:nth-child(2),
 .menu__lista:nth-child(3),
-.menu__lista:nth-child(4){
+.menu__lista:nth-child(4) {
     display: none;
 }
 
-/* SUPERIOR SEÇÃO */
-.superior__secao__container{
+/* SEÇÃO SUPERIOR */
+
+.superior__secao__container {
     display: flex;
     align-items: center;
     white-space: nowrap;
@@ -51,7 +54,8 @@
 }
 
 /* RODAPÉ */
-.rodape__container{
+
+.rodape__container {
     display: flex;
     /* flex-direction: column;
     flex-wrap: wrap; */
@@ -61,12 +65,81 @@
 @media (min-width: 834px) {
 
     /* CABEÇALHO */
-    .cabecalho__pesquisar__item{
+
+    .cabecalho__pesquisar__item {
         display: block;
     }
 
+    /* MENU LATERAL ADICIONADO NA ATIVIDADE EXTRA */
+
+    .menu__container {
+        left: 0;
+        height: auto;
+        width: 74px;
+        top: 80px;
+    }
+
+    .menu__lista {
+        flex-direction: column;
+        justify-content: flex-start;
+        padding-top: 15px;
+        gap: 33px;
+    }
+
     /* RODAPÉ */
-    .rodape__container{
+
+    .rodape__container {
         justify-content: space-between;
     }
+
 }
+
+    @media(min-width: 1440px) {
+
+        /* MENU LATERAL */ 
+
+        .menu__container {
+            width: 239px;
+            overflow: scroll;
+        }
+
+        .menu__lista:nth-child(2),
+        .menu__lista:nth-child(3),
+        .menu__lista:nth-child(4) {
+            display: flex;
+        }
+
+        .menu__lista {
+            height: auto;
+            padding: 20px 17px 20px 15px;
+            gap: 15px;
+        }
+
+        .menu__itens {
+            flex-direction: row;
+            gap: 15px;
+            align-items: center;
+        }
+
+        .menu__lista:nth-child(3) {
+            flex-direction: column-reverse;
+        }
+
+        .jogos {
+            order: 3;
+        }
+
+        .filmes {
+            order: 2;
+        }
+
+        .premium {
+            order: 1;
+        }
+
+        .maispagina {
+            order: 4;
+        }
+
+    }
+    
