--- a/CSS-Flexbox e layouts responsivos/css/flexbox.css
+++ b/CSS-Flexbox e layouts responsivos/css/flexbox.css
@@ -53,6 +53,12 @@
     gap: 15px;
 }
 
+/* VÍDEOS */
+.videos__item {
+    height: 303px;
+    width: 280px;
+}
+
 /* RODAPÉ */
 
 .rodape__container {
