--- a/CSS-construindo layouts com Grid/src/assets/style/grid/cartao.css
+++ b/CSS-construindo layouts com Grid/src/assets/style/grid/cartao.css
@@ -5,10 +5,10 @@
 }
 
 .secao-horizontal .cartao__imagem {
-    /* grid-column-start: 1;
+    /*grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
-    grid-row-end: 4; */
+    grid-row-end: 4;*/ 
     grid-area: 1/1/4/2;
 }
 
@@ -20,3 +20,9 @@
 .secao-horizontal .cartao__titulo {
     align-self: end;
 }
+
+.secao-vertical .cartao {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+
