--- a/SASS-CSS sintaticamente espetacular/sass-01/styles/style.css
+++ b/SASS-CSS sintaticamente espetacular/sass-01/styles/style.css
@@ -1,1 +1,29 @@
-/*# sourceMappingURL=style.css.map */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+}
+.container .esquerdo {
+  width: 50%;
+  background-color: #03001C;
+}
+.container .esquerdo .texto {
+  margin-top: 40%;
+  text-align: center;
+  font-size: 150px;
+  color: #301E67;
+}
+.container .direito {
+  width: 50%;
+  background-color: #301E67;
+}
+.container .direito .texto {
+  margin-top: 40%;
+  text-align: center;
+  font-size: 150px;
+  color: #03001C;
+}/*# sourceMappingURL=style.css.map */
