--- a/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/abstract/_variaveis.scss
+++ b/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/abstract/_variaveis.scss
@@ -2,6 +2,9 @@
 $fonte: 'Roboto', sans-serif;
 
 // Cores
-$cor-primaria: #94AF9F;
-$cor-secundaria: #AEC2B6;
-$cor-terciaria: #BBD6B8;
+$cor-primaria: #557153;
+$cor-secundaria: #A9AF7E;
+$cor-terciaria: #E6E5A3;
+
+// Tamanho das fontes
+$tamanho-do-texto: 3rem;
