--- a/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/style.css
+++ b/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/style.css
@@ -13,5 +13,32 @@ nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  color: #94AF9F;
+  color: #557153;
+}
+nav ul li a:hover {
+  border-bottom: 2px solid #A9AF7E;
+}
+
+.banner {
+  background: url(../imagens/banner.jpeg) 27% center no-repeat;
+  min-height: 350px;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.9;
+}
+.banner .inner-banner {
+  padding: 3rem;
+  background-color: #E6E5A3;
+  opacity: 0.9;
+  border-radius: 45px;
+}
+.banner .inner-banner h1 {
+  font-size: 3rem;
+  color: #557153;
+}
+.banner .inner-banner h2 {
+  font-size: 1.5rem;
+  color: #A9AF7E;
 }/*# sourceMappingURL=style.css.map */
