--- a/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/abstract/_variaveis.scss
+++ b/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/abstract/_variaveis.scss
@@ -2,9 +2,9 @@
 $fonte: 'Roboto', sans-serif;
 
 // Cores
-$cor-primaria: #557153;
-$cor-secundaria: #A9AF7E;
-$cor-terciaria: #E6E5A3;
+$cor-primaria: #495371;
+$cor-secundaria: #74959A;
+$cor-terciaria: #F1E0AC;
 
-// Tamanho das fontes
+// tamanho das fontes
 $tamanho-do-texto: 3rem;
