--- a/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/componets/_cupom.scss
+++ b/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/componets/_cupom.scss
@@ -4,23 +4,19 @@
     background-color: $cor-terciaria;
     padding: 4rem;
     text-align: center;
-
     .texto {
         color: $cor-primaria;
-
         h2 {
             margin: 2rem;
             font-size: $tamanho-do-texto / 1.7;
         }
     }
-
     .input {
         margin: 0 auto;
         width: 575px;
         border-radius: 20px;
         border: 4px solid white;
-        background-color: white;
-
+        background: white;
         input {
             border-radius: 20px;
             height: 40px;
@@ -30,13 +26,11 @@
             text-align: center;
             font-size: 26px;
         }
-
         &:hover, &:focus-within {
-            box-shadow: 1px 1px 8px 1px $cor-primaria; 
+            box-shadow: 1px 1px 8px 1px $cor-primaria;
             outline: none;
         }
     }
-
     button {
         text-transform: uppercase;
         margin-top: .75rem;
@@ -45,18 +39,17 @@
         text-align: center;
         width: 130px;
         background-color: $cor-primaria;
-        color: $cor-terciaria;
+        color: $cor-secundaria;
         letter-spacing: 1px;
         font-size: 12px;
         font-weight: bold;
         cursor: pointer;
         border: 2px $cor-primaria;
         border-radius: 40px;
-
         &:hover {
             color: $cor-primaria;
             background-color: $cor-secundaria;
-            border-color: $cor-primaria;
+            border-color: $cor-terciaria;
         }
     }
 }
