--- a/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/style.scss
+++ b/SASS-CSS sintaticamente espetacular/alura-spa-projeto_inicial/styles/style.scss
@@ -1,5 +1,6 @@
 @import './abstract/base';
-@import './components/navbar';
-@import 'components/banner';
-@import 'components/servicos';
-@import 'components/cupom';
+@import './componets/navbar';
+@import './componets/banner';
+@import './componets/servicos';
+@import './componets/cupom';
+@import './componets/_footer.sass';
